# ai-hackthon

./: README.md
yuxinyi/: README.md  SwiftIndex.md  experiment.md
yuxinyi/artifact/SwiftIndex/: AGENTS.md  Cargo.toml  README.md  experiment.md  lessons.md
yuxinyi/artifact/SwiftIndex/artifacts/: README.md  reproduce.sh
yuxinyi/artifact/SwiftIndex/src/: lib.rs  main.rs
yuxinyi/artifact/SwiftIndex/src/cli/: build.rs  mod.rs  query.rs  stats.rs  update.rs
yuxinyi/artifact/SwiftIndex/src/db/: connection.rs  migrations.rs  mod.rs  store.rs
yuxinyi/artifact/SwiftIndex/src/db/migrations/: 001_initial.sql  002_v1_1.sql
yuxinyi/artifact/SwiftIndex/src/extractor/: chunks.rs  edges.rs  mod.rs  summary.rs  symbols.rs
yuxinyi/artifact/SwiftIndex/src/git/: stats.rs
yuxinyi/artifact/SwiftIndex/src/indexer/: build.rs  derived.rs  mod.rs  update.rs
yuxinyi/artifact/SwiftIndex/src/model/: edge.rs  file.rs  mod.rs  query.rs  symbol.rs
yuxinyi/artifact/SwiftIndex/src/parser/: rust.rs
yuxinyi/artifact/SwiftIndex/src/query/: common.rs  compactor.rs  entrypoints.rs  explain.rs  files.rs  mod.rs  neighbors.rs  outline.rs  stats.rs  suggest.rs  symbols.rs
yuxinyi/artifact/SwiftIndex/src/ranking/: heuristics.rs  mod.rs  reranker.rs
yuxinyi/artifact/SwiftIndex/src/scanner/: mod.rs  workspace.rs
yuxinyi/artifact/SwiftIndex/tests/: cli_flow.rs
