[package]
name = "repo-index"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# Parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# File scanning
ignore = "0.4"

# Hashing
blake3 = "1.5"

# Cargo metadata
cargo_metadata = "0.18"

[[bin]]
name = "repo-index"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
